# LE-AriannaMethod

./: .gitignore  Dockerfile  EVAL.md  Makefile  PRETRAIN.md  README.md  pyproject.toml  readme-fr.md  requirements.txt
.github/workflows/: ci.yml
lit_gpt/: config.py  model.py  rmsnorm.py  speed_monitor.py  utils.py
pretrain/: __init__.py  leoleg.py  leoleg_code.py  utils.py
scripts/: convert_lit_checkpoint.py  install_le.sh  prepare_slimpajama.py  prepare_starcoder.py  setup_test_env.sh
sft/: finetune.py  genesis4.py  impressionistic_filter.py  simple_inference.py  simple_inference2.py
tests/: test_genesis4.py  test_lazy_tensor_attributes.py  test_pretrain_utils.py  test_script_entrypoints.py  test_simple_inference.py
