[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "le-ariannamethod"
version = "0.1.0"
description = "Training utilities for the LE Arianna Method"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["lit_gpt", "sft", "pretrain"]
